--- a/CP130_HW2_Bluetooth/CP130_HW2_Bluetooth/Base.lproj/Main.storyboard
+++ b/CP130_HW2_Bluetooth/CP130_HW2_Bluetooth/Base.lproj/Main.storyboard
@@ -127,6 +127,13 @@
                                     <action selector="startBroadcastTapped:" destination="HdK-kP-L6m" eventType="touchUpInside" id="fU3-2G-snZ"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="Enter some text in the text box above. Tap done to send the text as the peripheral's value." translatesAutoresizingMaskIntoConstraints="NO" id="Gtj-se-cxZ">
+                                <rect key="frame" x="20" y="182" width="280" height="72"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
