--- a/CP130_HW3_iPad/CP130_HW3/CP130_HW3/Base.lproj/Main.storyboard
+++ b/CP130_HW3_iPad/CP130_HW3/CP130_HW3/Base.lproj/Main.storyboard
@@ -73,23 +73,37 @@
             </objects>
             <point key="canvasLocation" x="5140" y="1484"/>
         </scene>
-        <!--View Controller-->
+        <!--Popover View Controller-->
         <scene sceneID="kQq-TK-1PP">
             <objects>
-                <viewController id="ETe-pM-oNa" sceneMemberID="viewController">
+                <viewController id="ETe-pM-oNa" customClass="JMSPopoverViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="RVT-vb-eBD"/>
                         <viewControllerLayoutGuide type="bottom" id="XgC-40-ukQ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="SU1-WB-xo8">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hfK-Lt-dFp">
+                                <rect key="frame" x="19" y="35" width="62" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Go Away">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="goAwayButtonTapped:" destination="ETe-pM-oNa" eventType="touchUpInside" id="aEG-5Y-p09"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="100" height="100"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U12-w7-okw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6027" y="308"/>
+            <point key="canvasLocation" x="6087" y="1424"/>
         </scene>
         <!--Edit Model View Controller-->
         <scene sceneID="efp-bs-ltN">
