--- a/CP130_HW7/CP130_HW7/CP130_HW7/Base.lproj/Main.storyboard
+++ b/CP130_HW7/CP130_HW7/CP130_HW7/Base.lproj/Main.storyboard
@@ -22,6 +22,9 @@
                                 <state key="normal" title="Buy the thing">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="buyButtonTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="eLU-dt-JCw"/>
+                                </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2 things purchased." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qGg-Nu-OzB">
                                 <rect key="frame" x="84" y="392" width="152" height="21"/>
@@ -33,6 +36,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="purchasedLabel" destination="qGg-Nu-OzB" id="Zwt-ff-hDN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
